# sysml-temp-control-mixed-sel4-camkes

./: .gitattributes  .gitignore  TempControlMixedCamkes.sysml  TempControlMixedSeL4CAmKES.sysml  readme.md
.slang/: TempControlSystem_Instance.json  integration_TempControlSystem_Instance.txt
hamr/c/etc_seL4/adapters/Fan_fp_ft/: Fan_fp_ft_adapter.c  Fan_fp_ft_adapter.h
hamr/c/etc_seL4/adapters/TempControl_tcp_tct/: TempControl_tcp_tct_adapter.c  TempControl_tcp_tct_adapter.h
hamr/c/etc_seL4/adapters/TempSensor_tsp_tst/: TempSensor_tsp_tst_adapter.c  TempSensor_tsp_tst_adapter.h
hamr/c/ext-c/: ext.c
hamr/c/ext-schedule/: process.c  round_robin.c  static_scheduler.c
hamr/camkes/: CMakeLists.txt  TempControlSystem_Instance.camkes
hamr/camkes/components/Fan_fp_f/: Fan_fp_f.camkes
hamr/camkes/components/Fan_fp_f/includes/: sb_Fan.h
hamr/camkes/components/Fan_fp_f/src/: sb_Fan.c
hamr/camkes/components/Fan_fp_ft/: Fan_fp_ft.camkes
hamr/camkes/components/Fan_fp_ft/src/: sb_Fan.c
hamr/camkes/components/TempControl_tcp_tc/: TempControl_tcp_tc.camkes
hamr/camkes/components/TempControl_tcp_tc/src/: sb_TempControl.c
hamr/camkes/components/TempControl_tcp_tct/: TempControl_tcp_tct.camkes
hamr/camkes/components/TempControl_tcp_tct/includes/: sb_TempControl.h
hamr/camkes/components/TempControl_tcp_tct/src/: sb_TempControl.c
hamr/camkes/components/TempSensor_tsp_ts/: TempSensor_tsp_ts.camkes
hamr/camkes/components/TempSensor_tsp_ts/includes/: sb_TempSensor.h
hamr/camkes/components/TempSensor_tsp_ts/src/: sb_TempSensor.c
hamr/camkes/components/TempSensor_tsp_tst/: TempSensor_tsp_tst.camkes
hamr/camkes/components/TempSensor_tsp_tst/src/: sb_TempSensor.c
hamr/camkes/kernel/: domain_schedule.c
hamr/camkes/slang_libraries/Fan_fp_ft/: CMakeLists.txt  sizes.txt  typemap.properties
hamr/camkes/slang_libraries/Fan_fp_ft/app-ft/: ft.c
hamr/camkes/slang_libraries/Fan_fp_ft/app-ft_seL4App/: ft_seL4App.c
hamr/camkes/slang_libraries/Fan_fp_ft/ext/: Fan_fp_ft_adapter.c  Fan_fp_ft_adapter.h
hamr/camkes/slang_libraries/Fan_fp_ft/runtime/: all.c  all.h  type-composite.h  types.c  types.h
hamr/camkes/slang_libraries/SlangTypeLibrary/: CMakeLists.txt  typemap.properties
hamr/camkes/slang_libraries/SlangTypeLibrary/app-SlangTypeLibrary/: SlangTypeLibrary.c
hamr/camkes/slang_libraries/SlangTypeLibrary/runtime/: all.c  all.h  type-composite.h  types.c  types.h
hamr/camkes/slang_libraries/TempControl_tcp_tct/: CMakeLists.txt  sizes.txt  typemap.properties
hamr/camkes/slang_libraries/TempControl_tcp_tct/app-tct/: tct.c
hamr/camkes/slang_libraries/TempControl_tcp_tct/app-tct_seL4App/: tct_seL4App.c
hamr/camkes/slang_libraries/TempControl_tcp_tct/ext/: TempControl_tcp_tct_adapter.c  TempControl_tcp_tct_adapter.h
hamr/camkes/slang_libraries/TempControl_tcp_tct/runtime/: all.c  all.h  type-composite.h  types.c  types.h
hamr/camkes/slang_libraries/TempSensor_tsp_tst/: CMakeLists.txt  sizes.txt  typemap.properties
hamr/camkes/slang_libraries/TempSensor_tsp_tst/app-tst/: tst.c
hamr/camkes/slang_libraries/TempSensor_tsp_tst/app-tst_seL4App/: tst_seL4App.c
hamr/camkes/slang_libraries/TempSensor_tsp_tst/ext/: TempSensor_tsp_tst_adapter.c  TempSensor_tsp_tst_adapter.h
hamr/camkes/slang_libraries/TempSensor_tsp_tst/runtime/: all.c  all.h  type-composite.h  types.c  types.h
hamr/camkes/types/: CMakeLists.txt
hamr/camkes/types/includes/: sb_queue_union_art_DataContent_1.h
hamr/camkes/types/src/: sb_queue_union_art_DataContent_1.c
hamr/slang-rm/src/main/architecture/slang_rm/: Arch.scala  Demo.scala  Platform.scala  ScheduleProvider.scala  Schedulers.scala
hamr/slang-rm/src/main/architecture/tc/: Arch.scala
hamr/slang-rm/src/main/bridge/slang_rm/TempControlMixedSeL4CAmKES/: Fan_Api.scala  Fan_fp_f_Bridge.scala  TempControl_Api.scala  TempControl_tcp_tc_Bridge.scala  TempControl_tcp_tc_GumboX.scala  TempSensor_Api.scala  TempSensor_tsp_ts_Bridge.scala  TempSensor_tsp_ts_GumboX.scala
hamr/slang-rm/src/main/bridge/tc/TempControlMixedSeL4CAmKES/: Fan_Api.scala  Fan_fp_ft_Bridge.scala  TempControl_Api.scala  TempControl_tcp_tct_Bridge.scala  TempControl_tcp_tct_GumboX.scala  TempSensor_Api.scala  TempSensor_tsp_tst_Bridge.scala  TempSensor_tsp_tst_GumboX.scala
hamr/slang-rm/src/main/component/slang_rm/GUMBO_Mixed_Definitions/: GUMBO__Library.scala
hamr/slang-rm/src/main/component/slang_rm/TempControlMixed/: GUMBO__Library.scala
hamr/slang-rm/src/main/data/slang_rm/: Aux_Types.scala  Base_Types.scala
hamr/slang-rm/src/main/inspector/slang_rm/: InspectorDemo.scala
hamr/slang-rm/src/main/util/slang_rm/: JSON.scala  MsgPack.scala  SlangCheckConfig.scala  SlangCheckDataTypeId.scala  SlangCheckGenerator.scala  SlangCheckRandom.scala
hamr/slang-rm/src/main/util/tc/: JSON.scala  MsgPack.scala  SlangCheckConfig.scala  SlangCheckDataTypeId.scala  SlangCheckGenerator.scala  SlangCheckRandom.scala
hamr/slang-rm/src/test/system/slang_rm/: SystemTests.scala
hamr/slang-rm/src/test/system/tc/: SystemTests.scala
hamr/slang-rm/src/test/util/slang_rm/: DSC_RecordUnsatPre.scala  GumboXUtil.scala  SystemTestSuite.scala  SystemTestSuiteSlang.scala
hamr/slang/src/main/architecture/slang/: Arch.scala  Demo.scala  Platform.scala  ScheduleProvider.scala  Schedulers.scala
hamr/slang/src/main/architecture/tc/: Arch.scala  Schedulers.scala
hamr/slang/src/main/data/slang/: Aux_Types.scala  Base_Types.scala
hamr/slang/src/main/nix/tc/: ArtNix.scala  Fan_fp_ft_App.scala  IPC.scala  LegacyDemo.scala  TempControl_tcp_tct_App.scala  TempSensor_tsp_tst_App.scala
hamr/slang/src/main/util/slang/: JSON.scala  MsgPack.scala  SlangCheckConfig.scala  SlangCheckDataTypeId.scala  SlangCheckGenerator.scala  SlangCheckRandom.scala
hamr/slang/src/main/util/tc/: JSON.scala  MsgPack.scala  SlangCheckConfig.scala  SlangCheckDataTypeId.scala  SlangCheckGenerator.scala  SlangCheckRandom.scala
hamr/slang/src/test/system/slang/: SystemTests.scala
hamr/slang/src/test/util/slang/: DSC_RecordUnsatPre.scala  GumboXUtil.scala  SystemTestSuite.scala  SystemTestSuiteSlang.scala
(+275 files in other folders)
